5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1613_2425.log
== TEST (2019-04-04 18:37:41) 
-- CODE:
distancia=float(input("distancia percorrida"))
combustivel=float(input("total de comb. gasto"))
consumomedio=combustivel/distancia
cmarr=round(consumomedio, 3)
print(cmarr)
-- OUTPUT:
0.07
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:38:18) 
-- CODE:
distancia=float(input("distancia percorrida"))
combustivel=float(input("total de comb. gasto"))
consumomedio=distancia/combustivel
cmarr=round(consumomedio, 3)
print(cmarr)
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:38:40) 
-- CODE:
distancia=float(input("distancia percorrida"))
combustivel=float(input("total de comb. gasto"))
consumomedio=distancia/combustivel
cmarr=round(consumomedio, 3)
print(cmarr km/l)
-- ERROR:
File "XXXX", line 5
    print(cmarr km/l)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:38:48) 
-- CODE:
distancia=float(input("distancia percorrida"))
combustivel=float(input("total de comb. gasto"))
consumomedio=distancia/combustivel
cmarr=round(consumomedio, 3)
print(cmarr "km/l")
-- ERROR:
File "XXXX", line 5
    print(cmarr "km/l")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:38:56) 
-- CODE:
distancia=float(input("distancia percorrida"))
combustivel=float(input("total de comb. gasto"))
consumomedio=distancia/combustivel
cmarr=round(consumomedio, 3)
print(cmarr"km/l")
-- ERROR:
File "XXXX", line 5
    print(cmarr"km/l")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:39:16) 
-- CODE:
distancia=float(input("distancia percorrida"))
combustivel=float(input("total de comb. gasto"))
consumomedio=distancia/combustivel
cmarr=round(consumomedio, 3)
print(cmarr"km/l")
-- ERROR:
File "XXXX", line 5
    print(cmarr"km/l")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:39:27) 
-- CODE:
distancia=float(input("distancia percorrida"))
combustivel=float(input("total de comb. gasto"))
consumomedio=distancia/combustivel
cmarr=round(consumomedio, 3)
print(cmarr / "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(cmarr / "km/l")
TypeError: unsupported operand type(s) for /: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:39:49) 
-- CODE:
distancia=float(input("distancia percorrida"))
combustivel=float(input("total de comb. gasto"))
consumomedio=float(distancia/combustivel)
cmarr=round(consumomedio, 3)
print(cmarr / "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(cmarr / "km/l")
TypeError: unsupported operand type(s) for /: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:40:35) 
-- CODE:
distancia=float(input("distancia percorrida"))
combustivel=float(input("total de comb. gasto"))
consumomedio=float(distancia/combustivel)
cmarr=round(consumomedio, 3)
print(cmarr,"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:40:43) 
-- CODE:
distancia=float(input("distancia percorrida"))
combustivel=float(input("total de comb. gasto"))
consumomedio=float(distancia/combustivel)
cmarr=round(consumomedio, 3)
print(cmarr,"km/l")
-- EXECUTION TIME:
0.134016
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
